capi/md_capi.h

/* ==================== 错误模型 ==================== */

typedef enum MD_STATUS {
    MD_OK = 0,
    MD_ERR_NULL_POINTER,        /* 入参为空 */
    MD_ERR_INVALID_ARGUMENT,    /* 参数不合法（路径为空/尺寸非法等） */
    MD_ERR_PATH_NOT_FOUND,      /* 模型/文件不存在 */
    MD_ERR_MODEL_LOAD,          /* 模型加载失败（含后端初始化失败） */
    MD_ERR_MODEL_PREDICT,       /* 推理失败 */
    MD_ERR_MODEL_INIT,          /* 模型初始化失败（is_initialized()==false） */
    MD_ERR_UNSUPPORTED_TYPE,    /* 模型类型不支持 */
    MD_ERR_UNSUPPORTED_BACKEND, /* 后端不可用 */
    MD_ERR_OUT_OF_MEMORY,       /* 内存分配失败 */
    MD_ERR_IMAGE_DECODE,        /* 图像解码失败 */
    MD_ERR_BUSY,                /* 句柄并发使用（检测到非单线程） */
    MD_ERR_NOT_IMPLEMENTED,     /* 功能未实现 */
    MD_ERR_AUDIO_DECODE,        /* 音频解码失败 */
    MD_ERR_INVALID_TYPE         /* 参数类型不匹配 */
} MDStatus;
/* 线程安全地获取最近一次错误信息（thread_local，返回空串表示无错误） */
MD_CAPI_EXPORT const char* md_get_last_error(void);
/* ==================== 句柄类型（不透明：调用方只见指针，不可解引用） ==================== */

typedef struct md_model_handle* MDModelHandle;
typedef struct md_image_handle* MDImageHandle;
typedef struct md_result_handle* MDResultHandle;
typedef struct md_option_handle* MDOptionHandle;
/* ==================== 模型类型 ==================== */

typedef enum MD_MODEL_KIND {
    MD_MODEL_DETECTION = 0,
    MD_MODEL_CLASSIFICATION,
    MD_MODEL_POSE,
    MD_MODEL_OBB,
    MD_MODEL_INSTANCE_SEG,
    MD_MODEL_SEM_SEG,
    MD_MODEL_DEPTH,
    MD_MODEL_FACE_DET,
    MD_MODEL_FACE_REC,
    MD_MODEL_FACE_AGE,
    MD_MODEL_FACE_GENDER,
    MD_MODEL_FACE_AS,
    MD_MODEL_FACE_AS_PIPELINE,
    MD_MODEL_FACE_REC_PIPELINE,
    MD_MODEL_INSIGHTFACE,
    MD_MODEL_INSIGHTFACE_DET,
    MD_MODEL_OCR,
    MD_MODEL_OCR_DET,
    MD_MODEL_OCR_REC,
    MD_MODEL_OCR_CLS,
    MD_MODEL_LPR_DET,
    MD_MODEL_LPR_REC,
    MD_MODEL_LPR_PIPELINE,
    MD_MODEL_PED_ATTR,
    MD_MODEL_ASR,
    MD_MODEL_TTS,
    MD_MODEL_FACE_AS_SECOND,
    MD_MODEL_HAND,
    MD_MODEL_REID,
    MD_MODEL_SPEAKER_VERIFY,
    MD_MODEL_FORMULA_RECOGNIZER,
    MD_MODEL_TSN,
    MD_MODEL_ST_GCN,
    MD_MODEL_VEHICLE_KEYPOINT,
    MD_MODEL_FACE_LANDMARK,
    MD_MODEL_TEXT_CLASSIFIER,
    MD_MODEL_COUNT
} MDModelKind;
/* ==================== 运行时选项 ==================== */

/* 设备与后端 */
typedef enum MD_DEVICE {
    MD_DEV_CPU = 0,
    MD_DEV_GPU = 1,
    MD_DEV_TPU = 2,
    MD_DEV_OPENCL = 3,  /* 预留，未实现：md_option_set_device 会报错而非静默忽略 */
    MD_DEV_VULKAN = 4   /* 预留，未实现：md_option_set_device 会报错而非静默忽略 */
} MDDevice;
typedef enum MD_BACKEND {
    MD_BK_ORT = 0,
    MD_BK_MNN = 1,
    MD_BK_TRT = 2,
    MD_BK_SOPHGO = 3
} MDBackend;
/* 创建默认选项（可后续用 setter 覆盖） */
MD_CAPI_EXPORT MDStatus md_option_create(MDOptionHandle* out);
MD_CAPI_EXPORT void md_option_destroy(MDOptionHandle);
MD_CAPI_EXPORT MDStatus md_option_set_device(MDOptionHandle, MDDevice, int device_id);
MD_CAPI_EXPORT MDStatus md_option_set_backend(MDOptionHandle, MDBackend);
MD_CAPI_EXPORT MDStatus md_option_set_cpu_threads(MDOptionHandle, int n);
MD_CAPI_EXPORT MDStatus md_option_set_fp16(MDOptionHandle, int enable);
MD_CAPI_EXPORT void md_option_set_trt_engine_path(MDOptionHandle, const char* path);  /* 保留，向后兼容 */
/* ==================== 图像 ==================== */

/* 从文件读图（库内解码 + 分配，调用方只需 destroy） */
MD_CAPI_EXPORT MDStatus md_image_from_file(MDImageHandle* out, const char* path);
/* 从内存构造（data 由调用方持有，库只引用不拷贝；调用方保证生命周期） */
MD_CAPI_EXPORT MDStatus md_image_from_bgr24(MDImageHandle* out, const void* bgr, int w, int h);
MD_CAPI_EXPORT MDStatus md_image_from_rgb24(MDImageHandle* out, const void* rgb, int w, int h);
MD_CAPI_EXPORT MDStatus md_image_from_nv12(MDImageHandle* out, const void* y, const void* uv,
                            int w, int h, int step_y, int step_uv);
/* 从设备 NV12 两平面构造自描述 ImageData（零拷贝借用外部 y/uv，库不拥有内存）。
 * dev 指明帧所在设备（CPU/GPU/TPU）；step_y/step_uv<=0 时依 w 兜底。 */
MD_CAPI_EXPORT MDStatus md_image_from_device_nv12(MDImageHandle* out, const void* y, const void* uv,
                            int w, int h, int step_y, int step_uv, MDDevice dev);
MD_CAPI_EXPORT MDStatus md_image_from_yuv420p(MDImageHandle* out, const void* data, int w, int h);
/* 编码数据 / base64 / 压缩字节 */
MD_CAPI_EXPORT MDStatus md_image_from_encoded(MDImageHandle* out, const void* bytes, size_t n);
MD_CAPI_EXPORT MDStatus md_image_from_base64(MDImageHandle* out, const char* b64);
/* 深拷贝 / 裁剪 / 显示 / 保存 / 编码（输出 buffer 归图像句柄所有，随 destroy 释放） */
MD_CAPI_EXPORT MDStatus md_image_clone(MDImageHandle in, MDImageHandle* out);
MD_CAPI_EXPORT MDStatus md_image_crop(MDImageHandle in, int x, int y, int w, int h, MDImageHandle* out);
MD_CAPI_EXPORT MDStatus md_image_show(MDImageHandle);
MD_CAPI_EXPORT MDStatus md_image_save(MDImageHandle, const char* path);
MD_CAPI_EXPORT MDStatus md_image_encode(MDImageHandle, const char* ext,
                         const unsigned char** buf, size_t* n);
MD_CAPI_EXPORT void md_image_destroy(MDImageHandle);
/* 图像尺寸查询 */
MD_CAPI_EXPORT MDStatus md_image_size(MDImageHandle, int* w, int* h);
/* 图像元数据：type=MdImageType 数值, dev=MDDevice, nplanes=平面数（NV12=2, packed=1）；任一指针可为空 */
MD_CAPI_EXPORT MDStatus md_image_info(MDImageHandle, int* type, int* dev, int* nplanes);
/*
 * 取帧平面指针（供外部零拷贝读取/写入，典型于 NV12 设备帧）。
 *  - 仅对 NV12 类型有效；CPU BGR 图此处返回 MD_ERR_UNSUPPORTED_TYPE 且 y=uv=NULL。
 *  - dev 返回帧所在设备（CPU/GPU/TPU）。
 */
MD_CAPI_EXPORT MDStatus md_image_plane_ptrs(MDImageHandle, MDDevice* dev, void** y, void** uv);
/* ==================== 模型 ==================== */

/*
 * 统一创建模型。
 *  - kind: 模型类型（见 MD_MODEL_*）
 *  - model_path: 模型文件路径（onnx/mnn/engine/bmodel，库按扩展名推断后端，
 *    也可通过 option 强制指定后端）
 *  - 多子模型（OCR/LPR pipeline/insightface/audio）：model_path 用 '|' 分隔符串联：
 *      OCR:        det.onnx|cls.onnx|rec.onnx|dict.txt
 *      LPR pipeline: det.onnx|rec.onnx
 *      insightface:  det.onnx|rec.onnx|lmk2d.onnx|lmk3d.onnx[|genderage.onnx]
 *      ASR:        model.onnx|tokens.txt
 *      TTS:        model.onnx|tokens.txt|lex_en.txt|lex_zh.txt|voices.bin|jieba_dir|norm_dir
 *  - 加密：本期仅支持单段（不含 '|' 分隔符）加密模型；多段管子模型的加密尚未生效，仅单段可靠。
 */
MD_CAPI_EXPORT MDStatus md_model_create(MDModelHandle* out, MDModelKind kind,
                         const char* model_path, const MDOptionHandle opt);
MD_CAPI_EXPORT void md_model_destroy(MDModelHandle);
/* 深拷贝模型句柄（独立实例，可并行/独立使用；基于模型内部 clone()，组合模型重新加载） */
MD_CAPI_EXPORT MDStatus md_model_clone(MDModelHandle in, MDModelHandle* out);
/* 模型是否就绪 */
MD_CAPI_EXPORT MDStatus md_model_ready(MDModelHandle);
/* 设置模型输入尺寸（可选；默认按模型内置输入。pipeline 模型设置检测子模型尺寸） */
MD_CAPI_EXPORT MDStatus md_model_set_input_size(MDModelHandle, int w, int h);
/* 设置 pipeline 模型的分类子模型输入尺寸（当前仅 PedestrianAttribute 使用） */
MD_CAPI_EXPORT MDStatus md_model_set_cls_input_size(MDModelHandle, int w, int h);
/* 设置 pipeline 模型分类子模型的 batch 大小（>0 固定，-1 自动；PedestrianAttribute / OCR）。
 * 0 或 < -1 → MD_ERR_INVALID_ARGUMENT；非 pipeline kind → MD_ERR_UNSUPPORTED_TYPE */
MD_CAPI_EXPORT MDStatus md_model_set_cls_batch_size(MDModelHandle, int batch);
/* 设置 OCR 整链路识别子模型（rec）的 batch 大小（>0 固定，-1 自动）。
 * 0 或 < -1 → MD_ERR_INVALID_ARGUMENT；非 OCR kind → MD_ERR_UNSUPPORTED_TYPE */
MD_CAPI_EXPORT MDStatus md_model_set_rec_batch_size(MDModelHandle, int batch);
/* 设置 OCR 识别子模型输入形状 (c, h, w)（对应 rec_preprocessor::set_rec_image_shape）。
 * 仅 OCR_REC / OCR；其余 → MD_ERR_UNSUPPORTED_TYPE */
MD_CAPI_EXPORT MDStatus md_model_set_rec_image_shape(MDModelHandle, int c, int h, int w);
/* ==================== 模型前/后处理参数 ==================== */
/* 按扁平参数名设置模型前/后处理参数（模型级持久；未设置用默认值）。
 * _i 整型、_d 浮点、_b 布尔(0/1)、_s 字符串/枚举。不支持的 kind → MD_ERR_UNSUPPORTED_TYPE；
 * 未知名 → MD_ERR_INVALID_ARGUMENT；类型不匹配 → MD_ERR_INVALID_TYPE；s 且 value=null → MD_ERR_NULL_POINTER。 */
MD_CAPI_EXPORT MDStatus md_model_set_param_i(MDModelHandle, const char* name, int64_t value);
MD_CAPI_EXPORT MDStatus md_model_set_param_d(MDModelHandle, const char* name, double value);
MD_CAPI_EXPORT MDStatus md_model_set_param_b(MDModelHandle, const char* name, int enable);
MD_CAPI_EXPORT MDStatus md_model_set_param_s(MDModelHandle, const char* name, const char* value);
/* 自省：names 以 '|' 分隔的单个字符串（库持有，无需释放；kind 无参数→空串）；
 * type_out 输出 'I'/'D'/'B'/'S'；未知名 → MD_ERR_INVALID_ARGUMENT；kind 越界 → MD_ERR_INVALID_ARGUMENT。 */
MD_CAPI_EXPORT MDStatus md_model_param_names(MDModelKind kind, const char** names);
MD_CAPI_EXPORT MDStatus md_model_param_type(MDModelKind kind, const char* name, char* type_out);
/* 推理：统一入口（视觉），结果句柄由库分配，调用方用 md_result_destroy 释放 */
MD_CAPI_EXPORT MDStatus md_model_predict(MDModelHandle, MDImageHandle, MDResultHandle* out);
/* 批量推理（多图，仅支持的模型） */
MD_CAPI_EXPORT MDStatus md_model_predict_batch(MDModelHandle, MDImageHandle* imgs, size_t n,
                                MDResultHandle* out);
/* ==================== 音频（ASR / TTS） ==================== */

/* ASR：从 wav 文件识别文本（库内解码 wav），text 归结果句柄所有无需释放 */
MD_CAPI_EXPORT MDStatus md_audio_asr_wav(MDModelHandle, const char* wav_path, const char** text);
/* ASR：从 PCM 浮点采样识别文本（data 由调用方持有，库只读） */
MD_CAPI_EXPORT MDStatus md_audio_asr(MDModelHandle, const float* samples, size_t n, int sample_rate,
                      const char** text);
/* TTS：文本合成音频（零拷贝返回库内 buffer；audio 归结果内部，随 md_model_destroy 释放前有效） */
MD_CAPI_EXPORT MDStatus md_audio_tts(MDModelHandle, const char* text, const char* voice, float speed,
                      int* sample_rate, const float** audio, size_t* audio_n);
/* wav 落盘辅助 */
MD_CAPI_EXPORT MDStatus md_wav_save(const float* samples, size_t n, int sample_rate, const char* path);
/* ==================== 结果（统一释放） ==================== */

MD_CAPI_EXPORT void md_result_destroy(MDResultHandle);
/* 结果种类（用于区分 getter） */
typedef enum MD_RESULT_KIND {
    MD_RES_DETECTION = 0,
    MD_RES_CLASSIFICATION,
    MD_RES_POSE,
    MD_RES_OBB,
    MD_RES_INSTANCE_SEG,
    MD_RES_SEM_SEG,
    MD_RES_DEPTH,
    MD_RES_FACE,
    MD_RES_FACE_REC,
    MD_RES_INSIGHTFACE,
    MD_RES_OCR,
    MD_RES_LPR,
    MD_RES_ATTR,
    MD_RES_AGE,
    MD_RES_GENDER,
    MD_RES_ASR,
    MD_RES_TTS,
    MD_RES_ANTISPOOF,
    MD_RES_REID,
    MD_RES_FORMULA
} MDResultKind;
MD_CAPI_EXPORT MDStatus md_result_kind(MDResultHandle, MDResultKind* out);
/* 结果对应的图内实例数（人脸数/文本行数/目标数等；单值结果恒为 1） */
MD_CAPI_EXPORT MDStatus md_result_count(MDResultHandle, size_t* out);
/* ==================== 通用几何 / 颜色 ==================== */

typedef struct MDBox { float x, y, w, h; } MDBox;
typedef struct MDPoint { float x, y; } MDPoint;
typedef struct MDPoint3 { float x, y, z; } MDPoint3;
typedef struct MDRotatedBox { float cx, cy, w, h, angle; } MDRotatedBox;
typedef struct MDColorRGBA { unsigned char r, g, b, a; } MDColorRGBA;
/* ==================== 结果项结构（blittable：纯数值、无指针，C# 可直映） ==================== */

typedef struct MDDetectionItem {
    float x, y, w, h;
    float score;
    int label_id;
} MDDetectionItem;
typedef struct MDClassifyItem {
    int label_id;
    float score;
} MDClassifyItem;
typedef struct MDPoseItem {
    float x, y, w, h;
    float score;
} MDPoseItem;
typedef struct MDObbItem {
    float cx, cy, w, h, angle;
    float score;
    int label_id;
} MDObbItem;
typedef struct MDIsegItem {
    float x, y, w, h;
    float score;
    int label_id;
} MDIsegItem;
typedef struct MDLprItem {
    float x, y, w, h;
    float score;
} MDLprItem;
typedef struct MDAttrItem {
    float x, y, w, h;
    float box_score;
    int box_label_id;
} MDAttrItem;
typedef struct MDFaceItem {
    float x, y, w, h;
    float score;
} MDFaceItem;
typedef struct MDInsightFaceItem {
    float x, y, w, h;
    float score;
    int gender;
    int age;
} MDInsightFaceItem;
/* ==================== 结果可视化（直接复用 C++ 的 vis_* 系列） ==================== */

/* 类别名映射：label_id -> 名称 */
typedef struct MDLabelItem {
    int id;
    const char* name;
} MDLabelItem;
/* 绘制选项（与 C++ vis_* 参数一一对应，第三方可完全控制） */
typedef struct MDDrawOptions {
    double threshold;            /* 置信度阈值（默认 0.5） */
    const MDLabelItem* label_map; /* 类别名映射，可为 NULL */
    size_t label_map_size;       /* label_map 条数 */
    const char* font_path;       /* 字体文件路径，可为 NULL */
    int font_size;               /* 默认 14 */
    double alpha;                /* 半透明混合系数（默认 0.15） */
    int save_result;             /* 非 0 保存 vis_result.jpg */
    /* 以下仅对 MD_RES_ATTR 生效（透传 C++ vis_attr 最后两参） */
    const int* abnormal_ids;     /* 异常对象索引列表（命中画红框，否则绿框），可为 NULL */
    size_t abnormal_ids_size;    /* abnormal_ids 条数 */
    int show_attr;               /* 非 0 绘制属性文本（默认 1） */
} MDDrawOptions;